[package]
authors = ["Avi Weinstock <git@aweinstock.com>"]
categories = ["game-development", "graphics", "rendering"]
description = "wgpu middleware for GPU-accelerated tilemap rendering, primarily targeted at 2d games"
edition = "2021"
keywords = ["2d", "gamedev", "tile", "tiled", "wgpu"]
license = "Apache-2.0"
name = "wgpu-tilemap"
readme = "README.md"
repository = "https://github.com/aweinstock314/wgpu-tilemap"
version = "0.1.1"

[dependencies]
bytemuck = { version = "1.23", features = ["derive"] }
vek = "0.15"
wgpu = "25.0.2"

csv = { version = "1.3", optional = true }
image = { version = "0.24", default-features = false, optional = true }
serde = { version = "1.0", optional = true }
wgpu-profiler = { version = "0.23", optional = true }

[features]
default = []
serde = ["dep:serde"]
wgpu-profiler = ["dep:wgpu-profiler"]
image = ["dep:image"]
csv = ["dep:csv"]
